objects/vlocity_ins__FinancialAccount__c.object
<CustomObject>
    <description>DEPRECATED. Use Asset (or Salesforce Financial Service Cloud) instead. Financial accounts managed by an insurance carrier or investment house. May represent financial accounts created from enrollment in a retirement plan or financial accounts associated with a whole life policy or annuity. Master-detail child object of Account.</description>
    <fields>
        <fullName>vlocity_ins__AccountNumber__c</fullName>
        <description>The account number of this financial account.</description>
        <label>Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AccountType__c</fullName>
        <description>Formula: the label of the record type. Assumes record types are defined based on types of financial accounts such as investment.</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AmountAvailableForWithdrawal__c</fullName>
        <description>Amount currently available for withdrawal from the account.</description>
        <label>Available for Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BenefitPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the benefit plan on which this financial account is based.</description>
        <label>Plan</label>
        <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClientAccountId__c</fullName>
        <description>The primary account holder of this financial account.</description>
        <label>Primary Account Holder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account</relationshipLabel>
        <relationshipName>FinancialAccount</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineOfBusiness__c</fullName>
        <description>Formula: Line of Business as defined on the associated product.</description>
        <formula>TEXT(vlocity_ins__ProductId__r.vlocity_ins__LineOfBusiness__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For financial accounts tied to an insurance offering, such as an annuity, this identifies the annuity or policy to which this financial account is tied.</description>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductCode__c</fullName>
        <description>Formula: Product code from the associated product.</description>
        <formula>vlocity_ins__ProductId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Optional) ID of the financial product which is this financial account.</description>
        <label>Financial Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <description>The status of this financial account such as open or closed.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalValue__c</fullName>
        <description>For investment accounts, the current total value of all holdings.</description>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__AccountNumber__c</columns>
        <columns>vlocity_ins__AmountAvailableForWithdrawal__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Investment</fullName>
        <active>true</active>
        <description>Record type for Investment account type category</description>
        <label>Investment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>